Added tests, postman collection, made some fixes
