# docs/swagger.yaml
@@ -8,13 +8,6 @@ paths:
     post:
       summary: Returns general tax data by rate.
       description: Taxation is a term for when a taxing authority imposes a tax. Imagine having multiple web sites in many countries out of which each must follow different local taxation rules and calculations.
-      parameters:
-        - in: query
-          name: trader
-          schema:
-            type: string
-          required: true
-          description: String value of trader (country)
       requestBody:
         description: Incoming object for request
         required: true
@@ -59,13 +52,6 @@ paths:
     post:
       summary: Returns general tax data by amount.
       description: Taxation is a term for when a taxing authority imposes a tax. Imagine having multiple web sites in many countries out of which each must follow different local taxation rules and calculations.
-      parameters:
-        - in: query
-          name: trader
-          schema:
-            type: string
-          required: true
-          description: String value of trader (country)
       requestBody:
         description: Incoming object for request
         required: true
@@ -110,13 +96,6 @@ paths:
     post:
       summary: Returns winnings tax data by rate.
       description: Taxation is a term for when a taxing authority imposes a tax. Imagine having multiple web sites in many countries out of which each must follow different local taxation rules and calculations.
-      parameters:
-        - in: query
-          name: trader
-          schema:
-            type: string
-          required: true
-          description: String value of trader (country)
       requestBody:
         description: Incoming object for request
         required: true
@@ -161,13 +140,6 @@ paths:
     post:
       summary: Returns winnings tax data by amount.
       description: Taxation is a term for when a taxing authority imposes a tax. Imagine having multiple web sites in many countries out of which each must follow different local taxation rules and calculations.
-      parameters:
-        - in: query
-          name: trader
-          schema:
-            type: string
-          required: true
-          description: String value of trader (country)
       requestBody:
         description: Incoming object for request
         required: true
